# baekjoon_coding_test

./: DNA 비밀번호.py  README.md  pyproject.toml  모험가 길드.py  미래 도시.py  미로 탈출.py  스택 수열.py  음료수 얼려 먹기.py  최솟값 찾기.py  컴퓨터전자시스템공학부_박동규_20191458_Assignment1_2024.py
bfs/: 우리는 하나.py
code_tree/LR Technique/: marathon.py
code_tree/bfs/: 갈 수 있는 곳들.py
code_tree/dfs/: dfs1.py
code_tree/dp/: 사각형 채우기.py  알바로 부자되기.py
code_tree/hashmap/: hashmap 기본.py  가장 많은 데이터.py  순서를 바꾸었을 때 같은 단어 그룹화하기.py  특별한 문자.py
code_tree/prefix_sum/: 돌의 소속.py  연속한 k개의 숫자.py
code_tree/priority_queue/: 앞에서부터 삭제하기 2.py  최솟값 3개.py
code_tree/treemap/: treemap 기본.py
code_tree/treeset/: 작지만 큰 숫자.py
code_tree/그리디/: 거스름돈.py  라면 사기.py  만들 수 없는 금액.py  무지의 먹방 라이브.py  센서.py
dfs/: 뿌요뿌요.py
dp/: 부분 수열의 합이 m.py
hashset/: 자리바꾸기2.py
priority_queue/: 가장 가까운 점.py  최소 정수 출력.py  최솟값 3개.py
programmers/hash/: 베스트앨범.py  완주하지 못한 선수.py  의상.py  전화번호 목록.py  폰켓몬.py
programmers/string/: 이상한 문자 만들기.py  짝지어 제거하기.py  튜플.py
programmers/스택,큐/: 같은 숫자는 싫어.py  기능개발.py  올바른 괄호.py  프로세스.py
string/: 짝지어 제거하기.py
treemap/: 처음 등장하는 위치.py
treeset/: treeset 기본.py
그리디/: project teams.py  곱하기 혹은 더하기.py  문자열 뒤집기.py  보물.py  볼링공 고르기.py
백트래킹/: n개의 점 중 m개 고르기.py  크기가 n인 순열.py
