[tool.poetry]
name = "coding-test-python"
version = "0.1.0"
description = ""
authors = ["Park Dongkyu <86235780+dong99u@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
